Fixed issues on iPhone (#180)

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -148,18 +148,10 @@ circle{
   }
 }
 
-.rsc-os-options {
-  margin: 0 !important;
-  padding: 0 !important;
 
-  .rsc-os-option {
-    width: 100% !important;
 
-    button {
-      width: 100% !important;
-      font-weight: bold !important;
-    }
-  }
+#ribon {
+  width: 5rem;
 }
 
 #ribon {
